2004-04-30  Larry Ewing  <lewing@ximian.com>

	* gtk/Adjustment.custom: add an a set method for StepIncrement.

	* gtk/glue/adjustment.c: add gtk_adjustment_set_step_increment.

2004-05-05  Mike Kestner  <mkestner@ximian.com>

	* generator/Signal.cs : rmv Handle param to SignalCallback ctor calls.
	s/GtkSharp.Signal*/GLib.Signal*.
	* generator/SignalHandler.cs : rmv Handle param to ctors as it's 
	redundant.  s/GtkSharp.Signal*/GLib.Signal*. Use new Connect/Disconnect
	instead of generating DllImports into libgobject directly.
	* glib/SignalArgs.cs : move the the GLib namespace.
	* glib/SignalCallback.cs : expose Connect and Disconnect methods to
	hide some pinvokes that were previously generated. Also move to the
	GLib namespace.
	gnome/*Handler.cs : update to new SignalHandler API.
	gnome/CanvasProxy.cs : ditto
	gnome/void*Signal.cs : ditto

2004-05-04  Mike Kestner  <mkestner@ximian.com>

	* sample/gconf/Makefile.am : fix some whitespace.  I love you, auto*.

2004-05-04  Mike Kestner  <mkestner@ximian.com>

	* configure.in : fix gtkhtml versioning *again*.
	* sample/gconf/Makefile.am : conditional build on ENABLE_GNOME.

2004-05-04  Mike Kestner  <mkestner@ximian.com>

	* configure.in : require gtkhtml-3.0.10 so we can use a single
	so version (.4).
	* sources/* : update to gtkhtml-3.0.10.  This produces zero change
	in the generated API.

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* */*.pc.in: change to use @PACKAGE@ where its needed, fixes pc bug

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump mono dep to 0.90

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump to 0.91, dont kill me mike.

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* gtk-sharp.pc.in: add PACKAGE stuff here

2004-05-03  Mike Kestner  <mkestner@ximian.com>

	* */Makefile.am : fix gacutil for new package switch
	* */*.pc.in : fix -libs var for new dll path

2004-05-03  Mike Kestner  <mkestner@ximian.com>
