@@ -1,4 +1,3 @@
 <configuration>
-  <dllmap dll="libgobject-2.0-0.dll" target="libgobject-2.0@LIB_PREFIX@.0@LIB_SUFFIX@"/>
   <dllmap dll="gnomedb-2" target="libgnomedb-2@LIB_PREFIX@.3@LIB_SUFFIX@"/>
 </configuration>
