@@ -1,7 +1,15 @@
-2004-04-30  Larry Ewing  <lewing@ximian.com>
+2004-05-05  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/BoxedGen.cs : remove g_value_init DllImport and change
+	(g|s)et_boxed to use a glue method to simplify dllmapping.
+	* glib/Value.cs : add Init method.
+	* glib/glue/value.cs : add get/set_boxed glue methods.
+	* */*.config.in : remove libgobject mappings for dlls that no longer
+	need them.
+
+2004-05-05  Larry Ewing  <lewing@ximian.com>
 
 	* gtk/Adjustment.custom: add an a set method for StepIncrement.
-
 	* gtk/glue/adjustment.c: add gtk_adjustment_set_step_increment.
 
 2004-05-05  Mike Kestner  <mkestner@ximian.com>
